# cosmic-nightshift

./: .gitignore  Cargo.toml  PACKAGING.md  README.md
.github/workflows/: build-deb.yml
crates/cosmic-nightlight/: Cargo.toml
crates/cosmic-nightlight/src/: applet.rs  autostart.rs  backend.rs  config.rs  daemon.rs  main.rs  settings_window.rs
crates/cosmic-nightshift/: Cargo.toml
crates/cosmic-nightshift/src/: applet.rs  autostart.rs  backend.rs  config.rs  daemon.rs  main.rs  settings_window.rs
crates/nightlight-core/: Cargo.toml
crates/nightlight-core/src/: drm.rs  gamma.rs  lib.rs  vt.rs
crates/nightlight-helper/: Cargo.toml
crates/nightlight-helper/src/: main.rs
crates/nightshift-core/: Cargo.toml
crates/nightshift-core/src/: drm.rs  lib.rs  vt.rs
crates/nightshift-helper/: Cargo.toml
crates/nightshift-helper/src/: main.rs
data/: io.github.cosmic_nightlight.desktop  io.github.cosmic_nightlight.settings.desktop  io.github.cosmic_nightshift.desktop  io.github.cosmic_nightshift.settings.desktop
debian/: changelog  control  copyright  cosmic-nightlight.user.service  cosmic-nightshift.user.service  postinst  rules
polkit/: 49-cosmic-nightlight.rules  49-cosmic-nightshift.rules
scripts/: install.sh  uninstall.sh
systemd/: cosmic-nightlight.service  cosmic-nightshift.service
