# SPDX-License-Identifier: MPL-2.0
[workspace]
resolver = "2"
members = [
    "crates/nightlight-core",
    "crates/nightlight-helper",
    "crates/cosmic-nightlight",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "MPL-2.0"

[workspace.dependencies]
nightlight-core = { path = "crates/nightlight-core" }
drm = "0.11"
libc = "0.2"
chrono = "0.4"
