# SPDX-License-Identifier: MPL-2.0
[package]
name = "cosmic-nightlight"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cosmic-nightlight"
path = "src/main.rs"

[dependencies]
nightlight-core.workspace = true
chrono.workspace = true

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# `applet` adds panel-applet support (status-bar icon + popup). We intentionally
# omit `wgpu` so every surface renders with the tiny-skia software renderer —
# the GPU renderer re-inits per layer-shell surface, which made the panel icon
# take 30–60s to appear and the popup ~5s to open (and falls back to slow
# software Vulkan when the applet can't reach the GPU). tiny-skia is always
# compiled in by libcosmic, so this just drops the GPU stack from the binary.
features = ["applet"]
